# KernelBench

./: .gitignore  Makefile  README.md  pyproject.toml  results.json
bench/: __init__.py  cpu_gemm_analysis.py  roofline.py  roofline_bgemm.py  run_bench.py  utils.py
kernels/CPP/: gemm.cpp
kernels/cuda/: hello.cu
kernels/mojo/: gemm.mojo  hello.mojo
kernels/triton/: hello.py
