[project]
name = "bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shashwat Pandey", email = "shashwatpandeym.v@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "matplotlib>=3.8.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pynvml>=12.0.0",
    "rich>=14.1.0",
    "torch>=2.8.0",
    "triton>=3.4.0",
]

[project.scripts]
bench = "bench:main"

[project.optional-dependencies]
torch = [
    "torch>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
